// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots should match snapshot when validityMode is ERROR and isValid is false 1`] = `
<div>
  <div
    class="text-field text-field--error"
  >
    <div
      class="i-width-sm-12"
    >
      <label
        class="label"
        for="elementId"
      >
        
        
        
        Mejladress
        
        
        
        
        
        <span
          class="label__message label__message--error"
        >
          <f-icon-stub
            class="label__icon--left"
            library="f"
            name="error"
          />
          
          
          
          Something went wrong.
          
          
          
        </span>
      </label>
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          class="text-field__input"
          data-validation=""
          id="elementId"
          maxlength="80"
          type="email"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`snapshots should match snapshot when validityMode is INITIAL and isValid is false 1`] = `
<div>
  <div
    class="text-field"
  >
    <div
      class="i-width-sm-12"
    >
      <label
        class="label"
        for="elementId"
      >
        
        
        
        Mejladress
        
        
        
        
        
        <!--v-if-->
      </label>
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          class="text-field__input"
          data-validation=""
          id="elementId"
          maxlength="80"
          type="email"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`snapshots should match snapshot when validityMode is INITIAL and isValid is true 1`] = `
<div>
  <div
    class="text-field"
  >
    <div
      class="i-width-sm-12"
    >
      <label
        class="label"
        for="elementId"
      >
        
        
        
        Mejladress
        
        
        
        
        
        <!--v-if-->
      </label>
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          class="text-field__input"
          data-validation=""
          id="elementId"
          maxlength="80"
          type="email"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`snapshots should match snapshot when validityMode is VALID and isValid is true 1`] = `
<div>
  <div
    class="text-field"
  >
    <div
      class="i-width-sm-12"
    >
      <label
        class="label"
        for="elementId"
      >
        
        
        
        Mejladress
        
        
        
        
        
        <!--v-if-->
      </label>
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          class="text-field__input"
          data-validation=""
          id="elementId"
          maxlength="80"
          type="email"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`snapshots should match snapshot with label and input 1`] = `
<div>
  <div
    class="text-field"
  >
    <div
      class="i-width-sm-12"
    >
      <label
        class="label"
        for="fkui-vue-element-0001"
      >
        
        
        
        Mejladress
        
        
        
        
        
        <!--v-if-->
      </label>
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          class="text-field__input"
          data-validation=""
          id="fkui-vue-element-0001"
          maxlength="80"
          type="email"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`snapshots should match snapshot with label, error message and input 1`] = `
<div>
  <div
    class="text-field"
  >
    <div
      class="i-width-sm-12"
    >
      <label
        class="label"
        for="fkui-vue-element-0001"
      >
        
        
        
        Mejladress
        
        
        
        
        
        <!--v-if-->
      </label>
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          class="text-field__input"
          data-validation=""
          id="fkui-vue-element-0001"
          maxlength="80"
          type="email"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`snapshots should match snapshot with label, tooltip, description, error message and input 1`] = `
<div>
  <div
    class="text-field"
  >
    <div
      class="i-width-sm-12"
    >
      <label
        class="label"
        for="fkui-vue-element-0001"
      >
        
        
        
        Mejladress
        
        
        
        
        
        <!--v-if-->
      </label>
    </div>
    <div
      class="text-field__input-wrapper i-width-sm-12"
    >
      
      
      <div
        class="text-field__icon-wrapper"
      >
        <input
          class="text-field__input"
          data-validation=""
          id="fkui-vue-element-0001"
          maxlength="80"
          type="email"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;
